# ToyConsensusAndStateMachineReplication

./: CMakeLists.txt  README.md
examples/greet_calculator/: CMakeLists.txt
examples/greet_calculator/client/: CMakeLists.txt  client.cpp
examples/greet_calculator/cmake/: FindGRPC.cmake  FindProtobuf.cmake
examples/greet_calculator/protos/: CMakeLists.txt  calculator_service.proto  greet_service.proto
examples/greet_calculator/server/: CMakeLists.txt  conf.json  server.cpp
include/tcsmr/base/net/: server.hpp  server_completion_queue.hpp
include/tcsmr/base/utils/: config.hpp  endpoint.hpp
src/: CMakeLists.txt
src/base/: CMakeLists.txt
src/base/net/: CMakeLists.txt  server.cpp  server_completion_queue.cpp
src/base/utils/: CMakeLists.txt  config.cpp  endpoint.cpp
